fix ZKCAL-101 100% height produces an unexpected vertical scrollbar h2. Root Cause .z-calendars-inner height is larger than .z-page 2px. Because .z-calendars-inner has border 1px specified, but it produces CSS height on its child .z-calendars-week upon its parent height 100%. So, the actual final height is .z-calendars-week height + 2px border.
h2. Solution
specify 1px border on .z-calendars-week, because box-sizing: border-box, the final height will be the height specified without adding 1px additionally.

--- a/calendar/src/main/resources/web/js/calendar/less/style/_calendar.less
+++ b/calendar/src/main/resources/web/js/calendar/less/style/_calendar.less
@@ -21,14 +21,13 @@ e('<%@ taglib uri="http://www.zkoss.org/dsp/web/theme" prefix="t" %>');
 	border: 1px solid @bodyColor;
 }
 
-.z-calendars-inner {
-	border: 1px solid @separatorColor;
-}
 // Calchildren
 .z-calendars-week {
 	position: relative;
 	overflow: hidden;
+	//put border and height on the same element won't produce extra height
 	height: 300px;
+	border: 1px solid @separatorColor;
 
 	&-header {
 		font-size: @fontSizeL;
